--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: Release to test
+name: Release
 
 on:
   push:
@@ -43,19 +43,24 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      # - name: set IMAGE_URL
+      #   id: image-url
+      #   run: echo "${{ steps.login-ecr.outputs.registry }}/terraform_example_next_ssr_repo/${{ github.sha }}" >> $GITHUB_OUTPUT
+
       - name: set IMAGE_URL
         id: image-url
-        run: echo "${{ steps.login-ecr.outputs.registry }}/terraform_example_next_ssr_repo/${{ github.sha }}" >> $GITHUB_OUTPUT
+        run: echo "IMAGE_URL=${{ steps.login-ecr.outputs.registry }}/terraform_example_next_ssr_repo/${{ github.sha }}" >> $GITHUB_ENV
 
-      - run: echo ${{ steps.image-url.output }}
+      # - run: echo ${{ steps.image-url.output }}
+      - run: echo ${{ env.IMAGE_URL }}
 
       - name: Build, tag, and push docker image to Amazon ECR
         run: |
-          docker build -t ${{ steps.image-url.output }} .
-          docker push ${{ steps.image-url.output }}
+          docker build -t ${{ env.IMAGE_URL }} .
+          docker push ${{ env.IMAGE_URL }}
 
       - name: deploy to lambda
-        run: aws lambda update-function-code --function-name terraformExampleNextSSR --image-uri ${{ steps.image-url.output }}
+        run: aws lambda update-function-code --function-name terraformExampleNextSSR --image-uri ${{ env.IMAGE_URL }}
 
       - name: deploy static to s3
         run: aws s3 cp --recursive --region ap-northeast-1 ./.next/static s3://test-sirius-frotend/_next/static
