--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,6 +2,7 @@
 FROM node:16 AS builder
 ARG build_id
 ENV BUILD_ID=${build_id}
+ENV NEXT_PUBLIC_BUILD_ID=${build_id}
 WORKDIR /build
 COPY package*.json ./
 RUN npm ci
