--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,6 +32,21 @@ jobs:
         with:
           node-version: "16"
 
+      - name: Set current date
+        env:
+          TZ: "Asia/Tokyo"
+        run: echo "CURRENT_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+
+      - name: Show current datetime
+        run: echo ${{ env.CURRENT_DATE }}
+
+      - uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ env.CURRENT_DATE }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-${{ env.CURRENT_DATE }}
+
       - name: install dependencies
         run: npm ci
 
@@ -46,13 +61,28 @@ jobs:
         id: image-url
         run: echo "IMAGE_URL=${{ steps.login-ecr.outputs.registry }}/terraform_example_next_ssr_repo:${{ github.sha }}" >> $GITHUB_ENV
 
-      - name: Build, tag, and push docker image to Amazon ECR
-        run: |
-          docker build -t ${{ env.IMAGE_URL }} --build-arg build_id=${{ github.sha }} .
-          docker push ${{ env.IMAGE_URL }}
+      # - name: Build, tag, and push docker image to Amazon ECR
+      #   run: |
+      #     docker build -t ${{ env.IMAGE_URL }} --build-arg build_id=${{ github.sha }} .
+      #     docker push ${{ env.IMAGE_URL }}
+
+      - uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ env.IMAGE_URL }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
       - name: deploy to lambda
         run: aws lambda update-function-code --function-name terraformExampleNextSSR --image-uri ${{ env.IMAGE_URL }}
 
       - name: deploy static to s3
         run: aws s3 cp --recursive --region ap-northeast-1 ./.next/static s3://${{ secrets.S3_BUCKET }}/_next/static
+
+      # Temp fix
+      # https://github.com/docker/build-push-action/issues/252
+      # https://github.com/moby/buildkit/issues/1896
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
