--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,8 @@
 # ベースイメージの変更
-# FROM amazon/aws-lambda-nodejs:16
-FROM nginx
+FROM amazon/aws-lambda-nodejs:16
 
 # Lambda Web Adapterのインストール
-# COPY --from=public.ecr.aws/awsguru/aws-lambda-adapter:0.5.0 /lambda-adapter /opt/extensions/lambda-adapter
+COPY --from=public.ecr.aws/awsguru/aws-lambda-adapter:0.5.0 /lambda-adapter /opt/extensions/lambda-adapter
 ENV PORT=3000
 ENV NODE_ENV=production
 
