--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -46,6 +46,7 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ env.CURRENT_DATE }}
           restore-keys: |
             ${{ runner.os }}-buildx-${{ env.CURRENT_DATE }}
+            ${{ runner.os }}-buildx-
 
       - name: install dependencies
         run: npm ci
@@ -69,7 +70,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - uses: docker/build-push-action@v2
+      - uses: docker/build-push-action@v4
         with:
           push: true
           tags: ${{ env.IMAGE_URL }}
