--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -74,10 +74,9 @@ jobs:
         with:
           push: true
           tags: ${{ env.IMAGE_URL }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+          cache-from: type=docker,src=/tmp/.buildx-cache
+          cache-to: type=docker,dest=/tmp/.buildx-cache-new,mode=max
           # path: frontend
-          platforms: linux/arm64
           context: ./frontend
 
       - name: deploy to lambda
