--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,6 +15,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+      packages: write
     defaults:
       run:
         working-directory: ./frontend
