--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -76,7 +76,7 @@ jobs:
           push: true
           tags: ${{ env.IMAGE_URL }}
           cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=loacl,dest=/tmp/.buildx-cache-new,mode=max
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
           # path: frontend
           context: ./frontend
           provenance: false
